# internal/gateway/handlers/auth.go
@@ -5,6 +5,7 @@ import (
 	"crypto/sha256"
 	"encoding/hex"
 	"fmt"
+	"github.com/golang-jwt/jwt/v5"
 	"github.com/google/uuid"
 	"github.com/saleh-ghazimoradi/Gophergram/config"
 	"github.com/saleh-ghazimoradi/Gophergram/internal/gateway/helper"
@@ -14,11 +15,13 @@ import (
 	"github.com/saleh-ghazimoradi/Gophergram/internal/service/service_models"
 	"github.com/saleh-ghazimoradi/Gophergram/logger"
 	"net/http"
+	"time"
 )
 
 type AuthHandler struct {
 	userService service.UserService
 	mailService service.Mailer
+	authService service.Authenticator
 }
 
 // RegisterUserHandler Register a user
@@ -33,7 +36,7 @@ type AuthHandler struct {
 //	@Failure		400		{object}	error
 //	@Failure		404		{object}	error
 //	@Security		ApiKeyAuth
-//	@Router			/v1/users/authentication [post]
+//	@Router			/v1/authentication/user [post]
 func (a *AuthHandler) RegisterUserHandler(w http.ResponseWriter, r *http.Request) {
 	var payload service_models.RegisterUserPayload
 	if err := json.ReadJSON(w, r, &payload); err != nil {
@@ -102,16 +105,72 @@ func (a *AuthHandler) RegisterUserHandler(w http.ResponseWriter, r *http.Request
 	}
 
 	logger.Logger.Info("Email sent", "status code", status)
-
 	if err := json.JSONResponse(w, http.StatusCreated, userWithToken); err != nil {
 		helper.InternalServerError(w, r, err)
 	}
 
 }
 
-func NewAuthHandler(userService service.UserService, mailService service.Mailer) *AuthHandler {
+// CreateTokenHandler Register a user
+//
+//	@Summary		Creates a token
+//	@Description	Creates a token for a user
+//	@Tags			authentication
+//	@Accept			json
+//	@Produce		json
+//	@Param			payload	body		service_models.CreateUserTokenPayload	true	"User credentials"
+//	@Success		200		{string}	string									"Token"
+//	@Failure		400		{object}	error
+//	@Failure		401		{object}	error
+//	@Failure		500		{object}	error
+//	@Router			/v1/authentication/token [post]
+func (a *AuthHandler) CreateTokenHandler(w http.ResponseWriter, r *http.Request) {
+	var payload service_models.CreateUserTokenPayload
+	if err := json.ReadJSON(w, r, &payload); err != nil {
+		helper.BadRequestResponse(w, r, err)
+		return
+	}
+
+	if err := helper.Validate.Struct(payload); err != nil {
+		helper.BadRequestResponse(w, r, err)
+		return
+	}
+
+	user, err := a.userService.GetByEmail(context.Background(), payload.Email)
+	if err != nil {
+		switch err {
+		case repository.ErrsNotFound:
+			helper.UnauthorizedErrorResponse(w, r, err)
+		default:
+			helper.InternalServerError(w, r, err)
+		}
+		return
+	}
+
+	claims := jwt.MapClaims{
+		"sub": user.ID,
+		"exp": time.Now().Add(config.AppConfig.Mail.Exp).Unix(),
+		"iat": time.Now().Unix(),
+		"nbf": time.Now().Unix(),
+		"iss": config.AppConfig.Authentication.Iss,
+		"aud": config.AppConfig.Authentication.Aud,
+	}
+
+	token, err := a.authService.GenerateToken(claims)
+	if err != nil {
+		helper.InternalServerError(w, r, err)
+		return
+	}
+
+	if err := json.JSONResponse(w, http.StatusCreated, token); err != nil {
+		helper.InternalServerError(w, r, err)
+	}
+}
+
+func NewAuthHandler(userService service.UserService, mailService service.Mailer, authService service.Authenticator) *AuthHandler {
 	return &AuthHandler{
 		userService: userService,
 		mailService: mailService,
+		authService: authService,
 	}
 }
